--- a/WPFdemo/WPFdemo.csproj
+++ b/WPFdemo/WPFdemo.csproj
@@ -103,16 +103,16 @@
     <Compile Include="Tag.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <None Include="ddddxaml">
+    <Page Include="dddd.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
-    </None>
+    </Page>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="MainWindow.xaml.cs">
-      <DependentUpon>ddddxaml</DependentUpon>
+      <DependentUpon>dddd.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
